--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@angular/platform-browser": "12.1.1",
     "@angular/platform-browser-dynamic": "12.1.1",
     "@angular/router": "12.1.1",
-    "@asymmetrik/ngx-leaflet": "8.1.0",
+    "@asymmetrik/ngx-leaflet": "^8.1.0",
+    "@asymmetrik/ngx-leaflet-draw": "^7.0.0",
     "keycloak-angular": "^8.4.0",
     "keycloak-js": "^15.0.2",
     "leaflet": "1.7.1",
+    "leaflet-draw": "^1.0.4",
     "rxjs": "6.6.0",
     "tslib": "2.2.0",
     "zone.js": "0.11.4"
@@ -31,7 +33,8 @@
     "@angular/cli": "12.1.1",
     "@angular/compiler-cli": "12.1.1",
     "@types/jasmine": "3.6.0",
-    "@types/leaflet": "1.7.5",
+    "@types/leaflet": "^1.7.5",
+    "@types/leaflet-draw": "^1.0.5",
     "@types/node": "12.11.1",
     "jasmine-core": "3.7.0",
     "karma": "6.3.0",
