--- a/package.json
+++ b/package.json
@@ -15,10 +15,7 @@
     }
   },
   "lint-staged": {
-    "src/**/*.ts": [
-      "eslint --fix",
-      "git add"
-    ]
+    "*.ts": ["./node_modules/.bin/eslint — fix", "git add"]
   },
   "private": true,
   "dependencies": {
