--- a/package.json
+++ b/package.json
@@ -6,16 +6,8 @@
     "start": "ng serve --open --port 4000",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "lint": "ng lint"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.ts": ["./node_modules/.bin/eslint — fix", "git add"]
+    "lint": "ng lint",
+    "pre-commit": "lint-staged"
   },
   "private": true,
   "dependencies": {
@@ -29,6 +21,8 @@
     "@angular/router": "12.1.1",
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@asymmetrik/ngx-leaflet-draw": "^7.0.0",
+    "@commitlint/cli": "^13.2.1",
+    "@commitlint/config-conventional": "^13.2.0",
     "keycloak-angular": "^8.4.0",
     "keycloak-js": "^15.0.2",
     "leaflet": "1.7.1",
@@ -55,14 +49,14 @@
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "husky": "7.0.4",
+    "husky": "^7.0.0",
     "jasmine-core": "3.7.0",
     "karma": "6.3.0",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage": "2.0.3",
     "karma-jasmine": "4.0.0",
     "karma-jasmine-html-reporter": "1.5.0",
-    "lint-staged": "11.2.6",
+    "lint-staged": "^11.2.6",
     "prettier": "^2.4.1",
     "typescript": "4.3.2"
   }
