--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.{js,json,css,scss,md,ts,html}": [
+    "src/**/*.+{js,css,scss,md,ts,html}": [
       "prettier --write",
-      "eslint --fix"
+      "eslint --fix "
     ]
   },
   "private": true,
@@ -53,7 +53,8 @@
     "@types/node": "12.11.1",
     "@typescript-eslint/eslint-plugin": "4.28.2",
     "@typescript-eslint/parser": "4.28.2",
-    "eslint": "^7.26.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.0",
